color adjustor config